# draft_web_backend

./: Cargo.toml  database.db  nohup.out  seed.csv
migrations/: 20250321071353_create_members_table.down.sql  20250321071353_create_members_table.up.sql
src/: main.rs
