[package]
name = "draft_web_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10.2"
cron = "0.15.0"
dotenv = "0.15.0"
rand = "0.9.0"
serde = {version="1.0", features=["derive"]}
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
tokio = { version = "1.44.1", features = ["full"] }
